Added fetch all waypoints
