# route/waypoint.route.js
@@ -1,0 +1,10 @@
+const express = require("express");
+
+const waypointController = require("@controller/waypoint.controller.js");
+const router = express.Router();
+
+//Base Url => /waypoints
+
+router.get("/", waypointController.getAllWaypoints);
+
+module.exports = router;
